# simple_vcpkg_library_application

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
vcpkg/ports/simple-vcpkg-library/: portfile.cmake  vcpkg.json
